--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "superagent": "^5.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
